# oidc-functions

./: .env.example  .gitignore  Cargo.toml  DECISIONS.md  DEPLOYMENT.md  Makefile  README.md  scope.md  spin.toml
argocd/: application.yaml
components/cp-landing/: Cargo.toml
components/cp-landing/src/: lib.rs
components/oidc-auth/: Cargo.toml
components/oidc-auth/src/: config.rs  jwks.rs  jwt.rs  lib.rs  pkce.rs  session.rs  util.rs
docs/: protect-your-function-with-oidc.md
k8s/: 00-namespace.yaml  01-realm-configmap.yaml  02-nginx-configmap.yaml  03-certificate.yaml  04-deployment.yaml  05-service.yaml
keycloak/: docker-compose.yml  realm-export.json
